testdata/baselines/reference/submodule/conformance/inferringClassMembersFromAssignments4.errors.txt
a.js(6,23): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (1 errors) ====
    class Base {
        m() {
            this.p = 1
        }
    }
    class Derived extends Base {
                          ~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m() {
            // should be OK, and p should have type number | undefined from its base
            this.p = 1
        }
    }
    